# dapps-workshop-tamagotchi

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yml  docs.yml  release.yml
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
